# jarvis-2.0-enterprise

./: .env.example  .gitignore  ALL_APIs_GUIDE.md  API_INTEGRATION_COMPLETE.md  API_ROUTING_COMPLETE.md  CODEEX_FEATURES.md  CODEEX_README.md  COMPLETE_IMPLEMENTATION.md  DELIVERABLES.md  DOCUMENTATION_INDEX.md  FEATURES_OVERVIEW.md  FINAL_INTEGRATION_STATUS.md  FINAL_SUMMARY.md  GITHUB_PUSH_INSTRUCTIONS.md  HEOSTER_JARVIS_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDIAN_APIs_GUIDE.md  INSTALL.md  INSTALLATION_GUIDE.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  IRON_MAN_JARVIS_COMPLETE.md  JARVIS_2.0_README.md  JARVIS_ARCHITECTURE_UPGRADE.md  JARVIS_COMPLETE_GUIDE.md  JARVIS_COMPLETE_INTEGRATION.md  JARVIS_DEVELOPER_GUIDE.md  JARVIS_IMPLEMENTATION_SUMMARY.md  JARVIS_MASTER_SUMMARY.md  JARVIS_QUICK_REFERENCE.md  JARVIS_STATS.md  JARVIS_UPGRADES_COMPLETE.md  LICENSE  NATURAL_LANGUAGE_GUIDE.md  NEW_README.md  NLU_COMPLETE.md  PINCODE_UPDATE.md  PROJECT_STATUS.md  QUICKSTART.md  (+41 more)
config/: default.yaml
core/: __init__.py  action_executor.py  action_planner.py  ai_client.py  api_router.py  assistant.py  automatic_training.py  cache_manager.py  codeex_assistant.py  codeex_personality.py  config.py  constants.py  conversation_handler.py  decision_engine.py  entity_extractor.py  entity_extractor_enhanced.py  feedback_system.py  grammar_corrector.py  heoster_personality.py  indian_apis.py  input_processor.py  intent_classifier.py  intent_classifier_enhanced.py  intent_router.py  iron_man_assistant.py  jarvis_brain.py  jarvis_unified.py  logger.py  (+18 more)
(+74 files in other folders)
